Bug 96541 - dialog "About LibreOfficeDev" has lost its logo
Summary: dialog "About LibreOfficeDev" has lost its logo
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Noel Grandin
URL:
Whiteboard: target:5.2.0
Keywords: bibisected, regression
: 96599 96670 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-12-16 14:56 UTC by Terrence Enger
Modified: 2016-10-25 19:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Terrence Enger 2015-12-16 14:56:10 UTC
STR
---
Open Start Center or Writer or Calc or Impress (I have not tried the other applications) and take menu options Help > About.
Observed : At the top of the dialog, above the words "Version: 5.2.0.0.alpha0+" there is about an inch of empty space.
Expected : There should be a logo at the top of the dialog.

Bibisecting in the daily debgug util bibisect repo started 2015-11-25, I see from `git bisect good` ...

    25cfd733b857192061159070e7bc710570553ec9 is the first bad commit
    commit 25cfd733b857192061159070e7bc710570553ec9
    Author: Miklos Vajna <vmiklos@collabora.co.uk>
    Date:   Sat Dec 12 05:36:48 2015 +0100

        2015-12-12: source-hash-37d735b27477cc1b72063b0ef307a437fa5233a1

    :100644 100644 30c968e87def0a74312860066fb1551c43cb741d b575f99f9f2bafd580e857f6e6866785d9667016 M	build-info.txt
    :040000 040000 29475203ac9fee67a13156dd296a3a57d55fbd98 8f9ef362f8997f6583c5538031771cd06338904b M	opt

and from `git bisect log

    # bad: [912402c7933d9d51aeacbd001f05a7d372b41b23] 2015-12-16: source-hash-c56e0858b081b4dfe78745cf80c829f6c3c2e7b8
    # good: [69eedb44a433e3be69137a83238a4184785c752f] 2015-11-25: source-hash-7289a140fc68dc898ba2b2357cc960968195f236
    git bisect start '912402c' 'oldest'
    # good: [8f87124263c2773edb093e17a3ca9755439903e3] 2015-12-05: source-hash-8ac2b6d077f4e7b1c5a010c2960fb08c0132da5f
    git bisect good 8f87124263c2773edb093e17a3ca9755439903e3
    # good: [3324b427ca76c383dd6d37f8f7a986417eac7b4f] 2015-12-10: source-hash-7b69dd64be71d1420158a553fb5ec861039cb017
    git bisect good 3324b427ca76c383dd6d37f8f7a986417eac7b4f
    # bad: [d05061d2e30e40c00b77964a3ec6ca7aacb671b2] 2015-12-13: source-hash-5df326438fd3a5613a52b4de1935426911ff1301
    git bisect bad d05061d2e30e40c00b77964a3ec6ca7aacb671b2
    # bad: [25cfd733b857192061159070e7bc710570553ec9] 2015-12-12: source-hash-37d735b27477cc1b72063b0ef307a437fa5233a1
    git bisect bad 25cfd733b857192061159070e7bc710570553ec9
    # good: [fa4d4b855bf9f9a413bc90a54e34d3a82b06d6c2] 2015-12-11: source-hash-f2070db3f2ad7e0c4b7d7233b5999bcf869226b5
    git bisect good fa4d4b855bf9f9a413bc90a54e34d3a82b06d6c2
    # first bad commit: [25cfd733b857192061159070e7bc710570553ec9] 2015-12-12: source-hash-37d735b27477cc1b72063b0ef307a437fa5233a1
Comment 1 Terrence Enger 2015-12-16 14:57:24 UTC
Setting keyword "bibisected".
Comment 2 Maxim Monastirsky 2015-12-17 09:13:57 UTC
Saw this too.
Comment 3 Maxim Monastirsky 2015-12-22 16:07:27 UTC
*** Bug 96670 has been marked as a duplicate of this bug. ***
Comment 4 Maxim Monastirsky 2015-12-22 16:17:36 UTC
*** Bug 96599 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2015-12-23 07:40:53 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=85e9b0f3ea017612d44a7abd7e2f854e16b6a676

tdf#96541 - dialog "About LibreOfficeDev" has lost its logo

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Terrence Enger 2015-12-24 13:59:20 UTC
In daily dbgutil bibisect version 2015-12-24, I see the logo.  Thank
you, Noel.

I am setting status VERIFIED FIXED.