tdf#96541 - dialog "About LibreOfficeDev" has lost its logo

regression from 58d8d8a "tdf#69977: uno::Sequence is expensive"

Change-Id: I792b5971a7a3a9532cccb36add5b558c68e397ef